syntax = "proto3";

package kv;

option go_package = "github.com/gr455/omnipresence/datastore/kv/service/genproto";

service KeyValue {
	rpc Get (GetRequest) returns (GetResponse);
	rpc Put (PutRequest) returns (PutResponse);
	rpc GetMap (GetMapRequest) returns (GetMapResponse);
}

message GetRequest {
	string key = 1;
}

message GetResponse {
	string value = 1;
}

message PutRequest {
	string key = 1;
	string value = 2;
}

message PutResponse {}

message GetMapRequest {}

message GetMapResponse {
	map<string, string> mp = 1;
}
